--- a/applyonline/templates/home.html
+++ b/applyonline/templates/home.html
@@ -1,19 +1,18 @@
+{% extends "base.html" %}
+{% load staticfiles %}
 {% load render_bundle from webpack_loader %}
-
-<html  lang="en">
-<head>
-<meta  charset="UTF-8">
-<base  href="/">
-<title>Apply Online</title>
-</head>
-<body>
-
-<app-root></app-root>
-
+{% block content %}
+  <aofront-root>
+    <div class="app-loading">
+      <div class="logo">
+      <svg class="spinner" viewBox="25 25 50 50">
+        <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10"/>
+      </svg>
+      </div>
+    </div>
+  </aofront-root>
 {% render_bundle 'runtime' %}
 {% render_bundle 'polyfills' %}
-{% render_bundle 'styles' %}
+{% render_bundle 'vendor' %}
 {% render_bundle 'main' %}
-
-</body>
-</html>
+{% endblock %}
