--- a/applyonline/templates/base.html
+++ b/applyonline/templates/base.html
@@ -10,10 +10,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta property="og:title" content="Apply Online">
   <meta property="og:description" content="Apply Online">
-  <meta property="og:image" content="static/img/stglogo.png">
+  <meta property="og:image" content="static/aofront/assets/logo.png">
   <meta property="og:url" content="https://apply.stgeorgesepiscopal.com">
 
-  <link rel="icon" type="image/png" href="./static/img/stglogo.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/static/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/static/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/static/icons/favicon-16x16.png">
+    <link rel="manifest" href="/static/icons/site.webmanifest">
+    <link rel="mask-icon" href="/static/icons/safari-pinned-tab.svg" color="#0e0e68">
+    <link rel="shortcut icon" href="/static/icons/favicon.ico">
+    <meta name="apple-mobile-web-app-title" content="Apply to SGES">
+    <meta name="application-name" content="Apply to SGES">
+    <meta name="msapplication-TileColor" content="#2b5797">
+    <meta name="msapplication-config" content="/static/icons/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
   <style type="text/css">
     body, html {
       height: 100%;
