--- a/applyonline/templates/home.html
+++ b/applyonline/templates/home.html
@@ -15,4 +15,5 @@
 {% render_bundle 'polyfills' %}
 {% render_bundle 'vendor' %}
 {% render_bundle 'main' %}
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBsOhs1J4pyNgYsLfPSSFHr1EWZ1uMViRc&libraries=places&language=en"></script>
 {% endblock %}
